# meta

./: .CONTEXT.md  .gitignore  .looprc  .meta.yaml  .processed_contextignore.tmp  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  Makefile  Makefile.context.mk  README.md  install.ps1  install.sh  release-please-config.json
.claude/: agent-guard.toml  settings-template.json  settings.json
.claude/agents/: meta-worker.md
.claude/commands/: kb-board.md  kb-close.md  kb-commit.md  kb-context.md  kb-create.md  kb-handoff.md  kb-progress.md  kb-review.md  kb-search.md  kb-start.md  kb-status.md  kb-tasks.md
.claude/rules/: code-intelligence.md  knowledge-management.md
.claude/skills/: meta-build.md  meta-core.md  meta-discover.md  meta-exec.md  meta-git.md  meta-plugins.md  meta-safety.md  meta-workspace.md  meta-worktree.md
.context/: CONTEXT.md  IMPLEMENTATION_PLAN.md  ITERATIVE_IMPLEMENTATION_PLAN.md  VISION_PLAN.md
.githooks/: pre-commit  pre-push
.kb/: .gitignore  AGENTS.md  config.toml
claude-plugin/: .mcp.json
docs/: advanced_usage.md  agent_workflows.md  architecture_overview.md  claude_code_skills.md  contributing.md  faq_troubleshooting.md  loop.md  loop_advanced_usage.md  loop_architecture_overview.md  loop_assets.md  loop_faq_troubleshooting.md  mcp_server.md  plugin_development.md  plugin_help_and_clone_design.md
docs/assets/: README.md
src/: lib.rs
tests/: agent_guard.bats  context.bats  exec.bats  git.bats  init.bats  plugin_install.bats  project_list.bats  worktree.bats  worktree_cloud.bats  worktree_edge_cases.bats
(+21 files in other folders)
