[package]
name = "loop"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
loop_lib = { path = "../loop_lib" }
[workspace]
members = [
    "loop",
    "loop_lib",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
