[package]
name = "meta-workspace"
version = "0.2.3"
edition = "2021"
publish = false

# Meta-repo root package for version tracking only.
# This package has no code - it exists solely for release-please to track versions.

[workspace]
members = [
    "loop_cli",
    "loop_lib",
    "meta_cli",
    "meta_core",
    "meta_git_cli",
    "meta_git_lib",
    "meta_mcp",
    "meta_plugin_protocol",
    "meta_rust_cli",
    "meta_project_cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/harmony-labs/meta"
